# push_swap

./: .cursorignore  .cursorrules  .gitignore  .gitmodules  Makefile  README.md
include/: push_swap.h
src/: actions.c  args_parsing.c  index_equivalent_arr.c  main.c  print_utils.c  stack_lifecycle.c  stack_operations.c  stack_utils.c  stack_utils_2.c
test/: CMakeLists.txt  e2e.cpp  index_equivalent_arr.cpp  operations.cpp  shell_test.sh
